# django-moo

./: .coverage  .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .markdownlintignore  .pre-commit-config.yaml  .readthedocs.yaml  .releaserc.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  compose.override.yml.example  compose.yml  docker-compose.devcontainer.yml  docker-compose.override.yml.example  docker-compose.yml  manage.py  package-lock.json  package.json  pylintrc  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
chart/termiverse/: Chart.yaml  README.md  values.yaml
chart/termiverse/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml  shell-deployment.yaml  shell-service.yaml  webapp-deployment.yaml  webapp-service.yaml
docs/: ARCHITECTURE.md  soul-agent.md
docs/source/: api.rst  conf.py  index.rst
docs/source/_ext/: verb_autodoc.py
docs/source/explanation/: accountability.md  architecture.md  introduction.md  parser.md  sandbox.md  shell-internals.md  zil-importer.md
docs/source/guide/: 01_introduction.md  01b_architecture.md  02_runtime.md  03_objects.md  03_runtime.md  03b_caching.md  04_objects.md  04_permissions.md  05_properties.md  06_permissions.md  06_verbs.md  07_parser.md  07_properties.md  08_creating_verbs.md  08_verbs.md  09_more_verbs.md  09_sandbox_security.md  10_parser.md  10_tasks.md  11_builtins.md  11_creating_verbs.md  12_development.md  12_more_verbs.md  13_bootstrapping.md  13_tasks.md  14_database_queries.md  16_bootstrapping.md  17_connection_control.md
docs/source/how-to/: accessibility.md  advanced-verbs.md  bootstrapping.md  connection-control.md  creating-verbs.md  development.md  multi-universe.md  npcs-and-daemons.md  permissions.md  ssh-key-management.md  windowed-display.md
docs/source/reference/: bootstrapping.md  builtins.md  caching.md  objects.md  parser.md  permissions.md  properties.md  runtime.md  sandbox.md  tasks.md  verbs.md  zil-importer.md
docs/source/tutorials/: building-rooms.md  custom-world.md  first-verb.md  player-basics.md  testing-verbs.md
extras/: entrypoint.sh
extras/healthchecks/: beat-liveness.sh  beat-readiness.sh  worker-liveness.sh  worker-readiness.sh
extras/helm/: Chart.yaml  README.md  values.yaml
extras/helm/templates/: _helpers.tpl  beat-deployment.yaml  hpa.yaml  ingress.yaml  jobs.yaml  shell-deployment.yaml  webapp-deployment.yaml  webapp-service.yaml  webssh-deployment.yaml  webssh-service.yaml  worker-deployment.yaml
extras/mudlet/: README.md  build.sh  config.lua  djangomoo.mpackage  djangomoo.xml  djangomoo_mapper_bridge.mpackage  djangomoo_mapper_bridge.xml
extras/mudlet/lua/: binary.lua  bridge_config.lua  connection.lua  editor.lua  mapper.lua  setup.lua
extras/nginx/: Dockerfile  nginx.conf
extras/pages/: hugo.toml
extras/skills/: README.md
extras/skills/game-designer/: SKILL.md
extras/skills/sandbox-auditor/: SKILL.md
extras/skills/tech-librarian/: SKILL.md
extras/skills/verb-author/: README.md  SKILL.md
extras/tools/: ssh_soak_test.py  ssh_watchdog.py
extras/uwsgi/: uwsgi.ini
extras/webssh/: index.html
extras/zil_import/: AGENTS.md  ARCHITECTURE.md  PHASE_350.md  PHASE_3_BACKLOG.md  PHASE_E4E_PLAN.md  STATUS.md  cli.py  converter.py  generator.py  ir.py  parser.py  translator.py
extras/zil_import/scripts/: zork1_smoke.py  zork1_spot.py
extras/zil_import/tests/: test_no_zmachine_leakage.py  test_translator.py
extras/zil_import/verbs/: PREFIX.py  SUFFIX.py
extras/zork_import/: cli.py  converter.py  generator.py  ir.py  parser.py  translator.py
moo/: AGENTS.md  __init__.py  celery.py  celeryconfig.py  conftest.py  logging.py  sdk.py  storage.py  tests.py  urls.py
moo/bootstrap/: AGENTS.md  __init__.py  apps.py  default.py  test.py
moo/bootstrap/default/: 000_initialize.py  010_core_classes.py  020_utility_objects.py  030_rooms.py  040_players.py  050_agent_tradesmen.py  060_agent_mailmen.py  070_agent_inspectors.py  080_agent_neighbours.py  090_agent_wanderer.py  999_finalize.py  __init__.py
moo/bootstrap/default_verbs/: __init__.py  _system_set_default_permissions.py
moo/bootstrap/migrations/: 0001_seed_default.py
moo/bootstrap/test_verbs/: _system_set_default_permissions.py
moo/bootstrap/zork1/: 010_classes.py  013_globals.py  015_tables.py  020_rooms.py  030_objects.py  035_tables.py  040_exits.py  README.md  __init__.py  bootstrap.py
moo/bootstrap/zork1_verbs/: __init__.py  awaken.py  axe_f.py  bad_egg.py  bag_of_coins_f.py  barrow_fcn.py  (+185 more)
moo/core/: __init__.py  admin.py  apps.py  code.py  exceptions.py  forms.py  managers.py  moojson.py  parse.py  tasks.py  utils.py
moo/sdk/: __init__.py  accounts.py  admin.py  audit.py  context.py  escape.py  mail.py  moderation.py  objects.py  onboarding.py  output.py  password.py  provenance.py  ratelimit.py  recovery.py  ssh_keys.py  tasks.py
moo/settings/: base.py  dev.py  local.py  test.py
moo/shell/: __init__.py  apps.py  editor.py  forms.py  history.py  iac.py  osc.py  paginator.py  prompt.py  server.py  views.py  window.py
termiverse/: __init__.py  asgi.py  settings.py  tests.py  urls.py  wsgi.py
termiverse/core/: __init__.py  admin.py  apps.py  code.py  exceptions.py  models.py  parse.py  utils.py
termiverse/settings/: base.py  dev.py  docker.py  local.py  test.py
termiverse/shell/: apps.py  prompt.py  server.py
(+2001 files in other folders)
