[tool.poetry]
name = "termiverse"
version = "0.15.1"
description = ""
authors = ["Phil Christensen <phil@bubblehouse.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
django = "~5"
psycopg2-binary = "^2.9.7"
uwsgi = "^2.0.22"
rich = "^13.5.3"
prompt-toolkit = "^3.0.39"
asyncssh = {extras = ["bcrypt"], version = "^2.14.0"}
restrictedpython = "^7.0"
ptpython = "^3.0.23"
django-simplesshkey = "^2.1.0"
watchdog = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pylint-django = "^2.5.5"
pytest-pylint = "^0.21.0"
pylint-pytest = "^1.1.7"
pytest-django = "^4.7.0"
pytest-spec = "^3.2.0"
coverage = "^7.4.4"
pytest-cov = "^4.1.0"
pylint-gitlab = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "termiverse.settings.test"
python_files = ["tests/*.py"]
addopts = "--spec --cov=termiverse --no-cov-on-fail"
spec_test_format = "{result} {docstring_summary}"
