[project]
name = "django-moo"
version = "0.48.1"
description = "A game server for hosting text-based online MOO-like games."
license = { text = "AGPL" }
authors = [
    { name = "Phil Christensen", email = "phil@bubblehouse.org" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "django>=5,<6",
    "psycopg2-binary>=2.9.7,<3",
    "uwsgi>=2.0.22,<3",
    "rich>=13.5.3,<14",
    "prompt-toolkit>=3.0.39,<4",
    "asyncssh[bcrypt]>=2.14.0,<3",
    "restrictedpython>=7.0,<8",
    "ptpython>=3.0.23,<4",
    "django-simplesshkey>=2.1.0,<3",
    "watchdog>=4.0.0,<5",
    "django-ace>=1.32.4,<2",
    "celery[redis]>=5.4.0,<6",
    "django-celery-results>=2.5.1,<3",
    "django-celery-beat>=2.6.0,<3",
    "webssh>=1.6.2,<2",
    "redis>=5.2.1,<6",
    "packaging>=25.0,<26",
    "more-itertools>=10.7.0,<11",
]

[project.urls]
Repository = "https://gitlab.com/bubblehouse/django-moo"

[dependency-groups]
dev = [
    "sphinx>=7.3.7,<8",
    "myst-parser>=3.0.1,<4",
    "sphinx-rtd-theme>=2.0.0,<3",
    "sphinx-autodoc-typehints>=2.2.2,<3",
    "pylint>=3.1.0,<4",
    "pylint-django>=2.5.5,<3",
    "pytest-pylint>=0.21.0,<1",
    "pylint-pytest>=1.1.7,<2",
    "pytest-django>=4.7.0,<5",
    "coverage>=7.4.4,<8",
    "pytest-cov>=4.1.0,<5",
    "pylint-gitlab>=2.0.0,<3",
    "pytest-profiling>=1.7.0,<2",
    "pytest-xdist>=3.8.0,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "moo",
    "manage.py",
    "CHANGELOG.md",
    "uv.lock",
    "docker-compose.*",
    "extras",
]

[tool.hatch.build.targets.wheel]
packages = ["moo"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "moo.settings.test"
python_files = ["tests/*.py"]
addopts = "--spec"
spec_test_format = "{result} {docstring_summary}"

[tool.black]
line-length = 120

[tool.uv]
dev-dependencies = [
    "pytest-spec>=6.0.0",
]
